# who-is-that-ebook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_epub.yaml
ed-chalstrey-lydia-france-gabriel-hanganu-radka-jersakova-federico-nanni-camila-rangel-smith-and-james-robinson_reinforcing-reg/src/epub/: content.opf
ed-chalstrey-lydia-france-gabriel-hanganu-radka-jersakova-federico-nanni-camila-rangel-smith-and-james-robinson_reinforcing-reg/src/epub/text/: chapter-1.xhtml  chapter-10.xhtml  chapter-11.xhtml  chapter-12.xhtml  chapter-2.xhtml  chapter-3.xhtml  chapter-4.xhtml  chapter-5.xhtml  chapter-6.xhtml  chapter-7.xhtml  chapter-8.xhtml  chapter-9.xhtml  colophon.xhtml  imprint.xhtml  titlepage.xhtml
reinforcing-reg/src/: LICENSE
reinforcing-reg/src/epub/: content.opf  toc.xhtml
reinforcing-reg/src/epub/css/: local.css
reinforcing-reg/src/epub/text/: chapter-1.xhtml  chapter-10.xhtml  chapter-11.xhtml  chapter-12.xhtml  chapter-2.xhtml  chapter-3.xhtml  chapter-4.xhtml  chapter-5.xhtml  chapter-6.xhtml  chapter-7.xhtml  chapter-8.xhtml  chapter-9.xhtml  colophon.xhtml  imprint.xhtml  uncopyright.xhtml
