[tool.poetry]
name = "who-is-that-ebook"
version = "0.1.0"
description = ""
authors = ["James Robinson <james.em.robinson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
standardebooks = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
